2025-11-28T01:58:18Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19751913357 # 822
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
* notice: last 14d: unq all: 4 1663
* notice: prev accum: outdated-unq outdated-all / unq all: 2935 275565 / 2953 277296
* notice: next accum: outdated-unq outdated-all / unq all: 2936 275686 / 2954 277417
* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -68 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-11-13] / [2025-11-14 2025-11-27 2025-11-28]

2025-11-27T01:58:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19722783410 # 821
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
* notice: last 14d: unq all: 4 1664
* notice: prev accum: outdated-unq outdated-all / unq all: 2934 275444 / 2951 277172
* notice: next accum: outdated-unq outdated-all / unq all: 2935 275565 / 2953 277296
* notice: prev exec diff / last date diff / accum: unq all: +2 +124 -0 -67 / +1 +23 -0 -0 / 1 23
* notice: removed / changed dates: [2025-11-12] / [2025-11-13 2025-11-26 2025-11-27]

2025-11-26T02:01:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19690040783 # 820
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
* notice: last 14d: unq all: 3 1653
* notice: prev accum: outdated-unq outdated-all / unq all: 2933 275323 / 2950 277053
* notice: next accum: outdated-unq outdated-all / unq all: 2934 275444 / 2951 277172
* notice: prev exec diff / last date diff / accum: unq all: +1 +119 -0 -75 / +1 +21 -0 -0 / 1 21
* notice: removed / changed dates: [2025-11-11] / [2025-11-12 2025-11-25 2025-11-26]

2025-11-25T02:00:52Z: