@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-11-29T01:57:52Z",
-  "count" : 121,
-  "count_minmax" : [ 23, 121 ],
-  "count_decinc" : [ -0, +121 ],
+  "count" : 23,
+  "count_minmax" : [ 23, 23 ],
+  "count_decinc" : [ -0, +23 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
