@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2025-11-28T01:58:18Z",
-  "count_outdated" : 275686,
-  "uniques_outdated" : 2936,
-  "count" : 277417,
-  "uniques" : 2954,
+  "timestamp" : "2025-11-29T01:57:52Z",
+  "count_outdated" : 275807,
+  "uniques_outdated" : 2937,
+  "count" : 277538,
+  "uniques" : 2955,
   "clones" : [
     {
-      "timestamp": "2025-11-14T00:00:00Z",
-      "count": 53,
-      "count_minmax": [ 21, 121 ],
-      "count_decinc": [ 68, 121 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2025-11-15T00:00:00Z",
-      "count": 126,
+      "count": 54,
       "count_minmax": [ 23, 126 ],
-      "count_decinc": [ 0, 126 ],
+      "count_decinc": [ 72, 126 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,6 +124,15 @@
     },
     {
       "timestamp": "2025-11-28T00:00:00Z",
+      "count": 121,
+      "count_minmax": [ 23, 121 ],
+      "count_decinc": [ 0, 121 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-29T00:00:00Z",
       "count": 23,
       "count_minmax": [ 23, 23 ],
       "count_decinc": [ 0, 23 ],
