@@ -1,15 +1,10 @@
 {
-  "count": 1663,
+  "count": 1659,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-11-14T00:00:00Z",
-      "count": 53,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-11-15T00:00:00Z",
-      "count": 126,
+      "count": 54,
       "uniques": 2
     },
     {
@@ -74,6 +69,11 @@
     },
     {
       "timestamp": "2025-11-28T00:00:00Z",
+      "count": 121,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-29T00:00:00Z",
       "count": 23,
       "uniques": 1
     }
