@@ -1,3 +1,12 @@
+2025-11-29T01:57:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19777362866 # 823
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-29
+* notice: last 14d: unq all: 4 1659
+* notice: prev accum: outdated-unq outdated-all / unq all: 2936 275686 / 2954 277417
+* notice: next accum: outdated-unq outdated-all / unq all: 2937 275807 / 2955 277538
+* notice: prev exec diff / last date diff / accum: unq all: +1 +121 -0 -72 / +1 +23 -0 -0 / 1 23
+* notice: removed / changed dates: [2025-11-14] / [2025-11-15 2025-11-28 2025-11-29]
+
 2025-11-28T01:58:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19751913357 # 822
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-28
